--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 											<span class="text-left" data-bind="text: company"></span>
 											<span class="label-text right show-for-medium-up">Työnantaja</span>							
 										</div>
-										<div class="table-cell">
+										<div class="table-cell" style="border-bottom: 0">
 											<span class="text-left" data-bind="text: moment(added(), 'YYYY-MM-DD').format('D.M.YYYY')"></span>
 											<span class="label-text right show-for-medium-up">Lisätty</span>
 										</div>
