--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 		<link rel="stylesheet" href="foundation.min.css">
 		<link rel="stylesheet" href="styles.css">		
+    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5">
 
 		<script src="jquery.js"></script>
 		<script src="knockout-3.1.0.js"></script>
@@ -15,7 +16,7 @@
 
 	<body>
 		<div id="main" class="large-12 medium-12 small-12 columns" style="padding-left:0; padding-right: 0">
-			<div class="large-4 medium-4 small-6 columns" style="font-size: 11pt; padding-left: 0; padding-right: 0; background: #222">
+			<div class="large-4 medium-4 small-4 columns" style="font-size: 11pt; padding-left: 0; padding-right: 0; background: #222">
 				<div>
 					<div class="scrollOuter">
 						<div class="scrollMiddle">
@@ -42,7 +43,7 @@
 				</div>
 			</div>
 
-			<div class="large-8 medium-8 small-6 columns" style="color: #eee; padding-right: 0; padding-left: 0;">
+			<div class="large-8 medium-8 small-8 columns" style="color: #eee; padding-right: 0; padding-left: 0;">
 				<div class="scrollOuter">
 					<div class="scrollMiddle">
 						<div class="scrollInner" style="height: 100%">			
