--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 		<link rel="stylesheet" href="foundation.min.css">
 		<link rel="stylesheet" href="styles.css">		
-    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5">
+    	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2, minimum-scale=0.5"> -->
+		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1.0, minimum-scale=0.5, user-scalable=0, minimal-ui" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+		<meta name="apple-mobile-web-app-title" content="Jkljobs-front" >
+
 
 		<script src="jquery.js"></script>
 		<script src="knockout-3.1.0.js"></script>
